# CodersInventory

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
docs/: index.md
docs/API-File-Structure/FastAPI/: .gitignore  README.md  main.py  pyproject.toml
docs/API-File-Structure/FastAPI/app/: server.py
docs/API-File-Structure/FastAPI/app/api/: collection.py
docs/API-File-Structure/FastAPI/app/response/: error.py
docs/API-File-Structure/FastAPI/app/schema/: collection_schema.py
docs/API-File-Structure/FastAPI/app/service/: service.txt
docs/API-File-Structure/FastAPI/base/: config.py
docs/API-File-Structure/FastAPI/base/app/: server.py
docs/API-File-Structure/FastAPI/base/app/db/: prisma_client.py
docs/API-File-Structure/FastAPI/base/app/job/: cron_job.py
docs/API-File-Structure/FastAPI/base/app/utils/: logger.py
docs/API-File-Structure/FastAPI/prisma/: partial_types.py  schema.prisma
docs/LLM/: config.py
docs/LLM/ChatGPT/: ChatGPTClass.py  ChatGptClass.md  pyproject.toml
docs/LLM/gpt2/finetune/lora/: .gitignore  data-preparation.ipynb  fine-tune-gpt-2.ipynb  pyproject.toml  test-gpt-2.ipynb  train-gpt-2.ipynb
docs/LLM/gpt2/finetune/lora/dataset/: data.json
docs/VectorDB/PGVector/: prsima_queries.md
docs/root/code-snippets/validation-patterns/: pydantic.md
docs/root/data-storage/bucket/: minio.md
docs/root/docs-and-markup/: markdown.md  mkdocs.md
docs/root/environment/deep-learning/: paddlepaddle.md  tensorflow.md  torch.md
docs/root/functional_validator/: pydantic.md
docs/root/markdown/: mkdocs-formatting-guide.md
docs/root/software-engineering/functional-validator/: pydantic.md
docs/root/software-engineering/functional_validator/: pydantic.md
docs/root/utilities/: cron-job.md  email-service.md  extract-json-from-text.md
docs/scripts/stylesheets/: extra.css
overrides/: main.html
root/code-snippets/validation-patterns/pydantic/: index.html
root/data-storage/bucket/minio/: index.html
root/databases/: index.html
root/devops/: index.html
root/docs-and-markup/markdown/: index.html
root/docs-and-markup/mkdocs/: index.html
root/environment/deep-learning/paddlepaddle/: index.html
root/environment/deep-learning/tensorflow/: index.html
root/environment/deep-learning/torch/: index.html
root/functional_validator/pydantic/: index.html
root/machine-Learning/llm-fine-tune/lora/flant5/: index.html
root/markdown/mkdocs-formatting-guide/: index.html
root/utilities/: index.html
root/utilities/cron-job/: index.html
root/utilities/email-service/: index.html
root/utilities/extract-json-from-text/: index.html
search/: search_index.json
