[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "CodersInventory"
version = "1.0.0"
description = "An Open Source Community for Code Snippets"
authors = [
    {name = "Muhammad Umar Anzar", email = "omer.anzar2@gmail.com"},
    {name = "Mubashir Ahmed Siddiqui", email = "mubashirsidiki@gmail.com"}
]
license = "MIT"
readme = "README.md"


requires-python = ">=3.11,<3.12"
dependencies = [
    "mkdocs-material[imaging] (>=9.6.9,<10.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)"
]


[tool.poetry]
package-mode = false


[project.urls]
Repository = "https://github.com/Hoopoes/CodersInventory"