[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = "Base file structure of fast api"
authors = ["Muhammad Umar Anzar <63141196+umar-anzar@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.111.0"
fastapi-utilities = "^0.2.0"
prisma = "^0.13.1"



[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"