[tool.poetry]
name = "Fine-tune-gpt-2"
version = "0.1.0"
description = "Fine tuning code"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

# For CPU support, uncomment the line below and comment the line above:
# [[tool.poetry.source]]
# name = "pytorch-src"
# url = "https://download.pytorch.org/whl/cpu"
# priority = "explicit"


# For GPU support, use the following configuration:
[[tool.poetry.source]]
name = "pytorch-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.training.dependencies]
transformers = {extras = ["torch"], version = "^4.44.2"}
peft = "^0.13.0"
datasets = "^3.0.1"
numpy = "1.26.4"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

# For GPU support, use the following configuration:
torch = {version = "2.3.1+cu121", source = "pytorch-src"}

# For CPU support, uncomment the line below and comment the line above:
# torch = {version = "^2.3.1+cpu", source = "pytorch-src"}

[tool.poetry.group.inference.dependencies]
transformers = {extras = ["torch"], version = "^4.44.2"}
peft = "^0.13.0"

# For GPU support, use the following configuration:
torch = {version = "2.3.1+cu121", source = "pytorch-src"}

# For CPU support, uncomment the line below and comment the line above:
# torch = {version = "^2.3.1+cpu", source = "pytorch-src"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
